--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,7 @@
     "jquery": "^3.3.1",
     "angular": "^1.6.9",
     "angular-route": "^1.6.9",
-    "angular-css": "^1.0.8"
+    "angular-css": "^1.0.8",
+    "components-font-awesome": "^5.0.6"
   }
 }
