--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,7 @@
     "jquery": "^3.3.1",
     "angular": "^1.6.9",
     "angular-route": "^1.6.9",
-    "components-font-awesome": "^5.0.6"
+    "components-font-awesome": "^5.0.6",
+    "angular-loading-bar": "^0.9.0"
   }
 }
