--- a/public/bower.json
+++ b/public/bower.json
@@ -19,6 +19,7 @@
     "angular": "^1.6.9",
     "angular-route": "^1.6.9",
     "components-font-awesome": "^5.0.6",
-    "angular-loading-bar": "^0.9.0"
+    "angular-loading-bar": "^0.9.0",
+    "angular-animate": "^1.6.9"
   }
 }
