--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,5 +2,5 @@
     "version": "0.1.0",
     "command": "node-Sass",
     "isShellCommand": true,
-    "args": ["./public/app/styles/scss/style.scss", "./public/app/styles/css/style.css"]
+    "args": ["./app/styles/scss/style.scss", "./app/styles/css/main.css"]
 }
