--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "handlebars": "^4.0.11",
     "uglify-js": "^3.3.15"
   },
+  "engines": {
+    "node": "8.9.4"
+  },
   "devDependencies": {
     "morgan": "^1.9.0",
     "autoprefixer-core": "^5.2.1",
